kubernetes/dragonfly-operator/base/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: dragonfly-operator-system
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-server
  namespace: dragonfly-operator-system
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: openshift-kube-apiserver
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-kube-apiserver
      ports:
        - protocol: TCP
          port: 6443

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-traffic
  namespace: dragonfly-operator-system
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Egress
  podSelector: {}
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
          podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
      ports:
        - port: 5353
          protocol: UDP
        - port: 5353
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: quay
  namespace: dragonfly-operator-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: quay
          podSelector:
            matchLabels:
              app: quay-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 9999
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gitea
  namespace: dragonfly-operator-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gitea
          podSelector:
            matchLabels:
              app: gitea-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 9999
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud
  namespace: dragonfly-operator-system
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud-fpm
          podSelector:
            matchLabels:
              app: nextcloud-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 9999
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd
  namespace: dragonfly-operator-system
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
          podSelector:
            matchLabels:
              app: argocd-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 9999
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-apps
  namespace: dragonfly-operator-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd-apps
          podSelector:
            matchLabels:
              app: argocd-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 9999
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netbox
  namespace: dragonfly-operator-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: netbox
          podSelector:
            matchLabels:
              app: netbox-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 9999
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich
  namespace: dragonfly-operator-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: immich
          podSelector:
            matchLabels:
              app: immich-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 9999

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: llm-open-webui
  namespace: dragonfly-operator-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: llm
          podSelector:
            matchLabels:
              app: open-webui-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 9999
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: llm-lite-llm
  namespace: dragonfly-operator-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: llm
          podSelector:
            matchLabels:
              app: litellm-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 9999
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: finance-tracker
  namespace: dragonfly-operator-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: finance-tracker
          podSelector:
            matchLabels:
              app: finance-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 9999
